@@ -1,12 +1,6 @@
-- Make list items reorderable (they do not hcange positions): TreeView DND is apparently bugged (at least 2.4.0)
-- check for temp size and verify perms
 - when u have a rw cd it doesn't ask if u want to clean it first (done but should be moved to ncb instead)
-- serpentine_shell.py needs looove!
-- we need to handle the recording process better:
-  * lock the drive before converting
-  * check if user has a cdrw inserted
-  * check if user has a blank cd or a cdrw
 - gtk_util.HigProgress should be visible in taskbar, not have a parent and be
   minizable
 - handle adding operations in a queue when it's already running
 - emit to context when dnd has moved successfully
+- add export to playlist and export to CUE/WAVs
